# pyflyte_yaml_runner

./: README.md  pyproject.toml
examples/simple_python/: compute_statistics.py  workflow.yaml
examples/simple_transfer/: create_data.py  workflow.yaml
examples/single_output/: workflow.yaml
examples/single_task/: workflow.yaml
examples/workflow_input/: compute_statistics.py  input.yaml  post_process.py  workflow.yaml
flyte_yaml_runner/: _bin.py
pyflyte_yaml_runner/: _bin.py  _pyflyte_yaml_runner_resolver.py  _register.py  _run.py  _workflow.py
