[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flyte_yaml_runner"
version = "0.1.0"
authors = [{ name = "Thomas J. Fan", email = "thomasjpfan@gmail.com" }]
description = "YAML workflow runner for Flytekit"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []
